--- a/java2/index.html
+++ b/java2/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <footer></footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
