--- a/java2/index.html
+++ b/java2/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>:: Front Page ::</title>
   </head>
   <body>
-    <footer>footer</footer>
+    <header>
+      <ul>
+        <li class="navigation">Home</li>
+        <li class="navigation">Posts</li>
+        <li class="navigation">Settings</li>
+        <li class="navigation">Log out</li>
+      </ul>
+    </header>
+    <section class="main">
+      <div class="main__content">
+        <div class="main__conent--box">Posts</div>
+        <div class="main__conent--box">Create Post</div>
+        <div class="main__conent--box">Profile</div>
+        <div class="main__conent--box">Settings</div>
+      </div>
+    </section>
+    <section>
+      <footer></footer>
+    </section>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
