setting up still

--- a/java2/index.html
+++ b/java2/index.html
@@ -7,20 +7,25 @@
     <title>:: Front Page ::</title>
   </head>
   <body>
-    <header>
-      <ul>
-        <li class="navigation">Home</li>
-        <li class="navigation">Posts</li>
-        <li class="navigation">Settings</li>
-        <li class="navigation">Log out</li>
+    <section class="top-nav">
+      <div>Logo Here</div>
+      <input id="menu-toggle" type="checkbox" />
+      <label class="menu-button-container" for="menu-toggle">
+        <div class="menu-button"></div>
+      </label>
+      <ul class="menu">
+        <li>Home</li>
+        <li>Posts</li>
+        <li>Create Post</li>
+        <li>Log Out</li>
       </ul>
-    </header>
+    </section>
     <section class="main">
       <div class="main__content">
-        <div class="main__conent--box">Posts</div>
-        <div class="main__conent--box">Create Post</div>
-        <div class="main__conent--box">Profile</div>
-        <div class="main__conent--box">Settings</div>
+        <div class="main__content--box">Posts</div>
+        <div class="main__content--box">Create Post</div>
+        <div class="main__content--box">Profile</div>
+        <div class="main__content--box">Settings</div>
       </div>
     </section>
     <section>
