--- a/java2/index.html
+++ b/java2/index.html
@@ -22,10 +22,22 @@
     </section>
     <section class="main">
       <div class="main__content">
-        <div class="main__content--box">Posts</div>
-        <div class="main__content--box">Create Post</div>
-        <div class="main__content--box">Profile</div>
-        <div class="main__content--box">Settings</div>
+        <div class="main__content--box">
+          <p class="main__content--text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima
+            assumenda earum tempore officiis ad quos voluptates, magni sed, vel
+            quibusdam animi impedit temporibus iure fuga harum, reprehenderit
+            hic obcaecati at qui? Ut, magni esse nemo architecto recusandae
+            similique animi illo sed accusantium facilis est maxime nisi natus,
+            aspernatur labore aut!
+          </p>
+        </div>
+      </div>
+      <div class="main__content">
+        <div class="main__content--box"></div>
+        <div class="main__content--box"></div>
+        <div class="main__content--box"></div>
+        <div class="main__content--box"></div>
       </div>
     </section>
     <section>
