--- a/java2/index.html
+++ b/java2/index.html
@@ -23,19 +23,8 @@
     <section class="main">
       <div class="main__content">
         <div class="main__content--box">
-          <p class="main__content--text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima est
-            maxime nisi natus, aspernatur labore aut!
-          </p>
-        </div>
-      </div>
-      <div class="main__content">
-        <div class="main__content--box">
-          <p class="main__content--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
-            ullam.
-          </p>
-          <button class="btn">Click me</button>
+          <h2>Hello, welcome back</h2>
+          <p class="main__content--text">Time to create some posts</p>
         </div>
         <div class="main__content--box">
           <p class="main__content--text">
@@ -46,22 +35,24 @@
         </div>
         <div class="main__content--box">
           <p class="main__content--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
-            ullam.
+            Lorem ipsum dolor sit amet consectetur adipisicing.
+          </p>
+          <button class="btn">Click me</button>
+        </div>
+        <div class="main__content--box">
+          <p class="main__content--text">Lorem ipsum dolor sit amet.</p>
+          <button class="btn">Click me</button>
+        </div>
+        <div class="main__content--box">
+          <p class="main__content--text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
           </p>
           <button class="btn">Click me</button>
         </div>
         <div class="main__content--box">
           <p class="main__content--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
-            ullam.
-          </p>
-          <button class="btn">Click me</button>
-        </div>
-        <div class="main__content--box">
-          <p class="main__content--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
-            ullam.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perferendis.
           </p>
           <button class="btn">Click me</button>
         </div>
