setting up script

--- a/java2/index.html
+++ b/java2/index.html
@@ -31,30 +31,30 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
             ullam.
           </p>
-          <button class="btn">Click me</button>
+          <button class="btn">Let's Go</button>
         </div>
         <div class="main__content--box">
           <p class="main__content--text">
             Lorem ipsum dolor sit amet consectetur adipisicing.
           </p>
-          <button class="btn">Click me</button>
+          <button class="btn">Let's Go</button>
         </div>
         <div class="main__content--box">
           <p class="main__content--text">Lorem ipsum dolor sit amet.</p>
-          <button class="btn">Click me</button>
+          <button class="btn">Let's Go</button>
         </div>
         <div class="main__content--box">
           <p class="main__content--text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
           </p>
-          <button class="btn">Click me</button>
+          <button class="btn">Let's Go</button>
         </div>
         <div class="main__content--box">
           <p class="main__content--text">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Perferendis.
           </p>
-          <button class="btn">Click me</button>
+          <button class="btn">Let's Go</button>
         </div>
       </div>
     </section>
