--- a/java2/index.html
+++ b/java2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="/main.js" defer></script>
     <title>:: Front Page ::</title>
   </head>
   <body>
@@ -61,6 +62,5 @@
     <section>
       <footer></footer>
     </section>
-    <script type="module" src="/main.js"></script>
   </body>
 </html>
