--- a/java2/index.html
+++ b/java2/index.html
@@ -57,6 +57,7 @@
           </p>
           <button class="btn">Let's Go</button>
         </div>
+        <a href="./login.html">Hej</a>
       </div>
     </section>
     <section>
