--- a/java2/login.html
+++ b/java2/login.html
@@ -8,6 +8,6 @@
     <title>:: Welcome || Log in ::</title>
   </head>
   <body>
-    <h1>halleluja</h1>
+    <h1 class="fix">halleluja</h1>
   </body>
 </html>
