--- a/java2/login.html
+++ b/java2/login.html
@@ -9,5 +9,36 @@
   </head>
   <body>
     <h1 class="fix">halleluja</h1>
+    <center><h1>Student Login Form</h1></center>
+    <form>
+      <div class="container">
+        <label>Your Name: New users only </label>
+        <input
+          type="text"
+          placeholder="Enter Name"
+          name="name"
+          required
+        />
+        <label>Email adress : </label>
+        <input
+          type="text"
+          placeholder="Enter your email"
+          name="email"
+          required
+        />
+        <label>Password : </label>
+        <input
+          type="password"
+          placeholder="Enter Password"
+          name="password"
+          required
+        />
+        <button type="submit">Login</button>
+        <button type="submit">Register new user</button>
+        <input type="checkbox" checked="checked" /> Remember me
+        <button type="button" class="cancelbtn">Cancel</button>
+        Forgot <a href="#"> password? </a>
+      </div>
+    </form>
   </body>
 </html>
