--- a/java2/index.html
+++ b/java2/index.html
@@ -57,7 +57,8 @@
           </p>
           <button class="btn">Let's Go</button>
         </div>
-        <a href="./login.html">Hej</a>
+        <a href="./login.html">login</a>
+        <a href="./posts.html">Posts</a>
       </div>
     </section>
     <section>
