buildng posts.html

--- a/java2/posts.html
+++ b/java2/posts.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <header></header>
-    <div class="post__container">d</div>
+    <div class="grid__container">
+      <div class="post__container"></div>
+      <div class="post__container"></div>
+      <div class="post__container"></div>
+      <div class="post__container"></div>
+    </div>
   </body>
 </html>
