--- a/java2/posts.html
+++ b/java2/posts.html
@@ -10,7 +10,18 @@
   <body>
     <header></header>
     <div class="grid__container">
-      <div class="post__container"></div>
+      <div class="post__container">
+        <div class="post__container--box">
+          <h3 class="post_headline">I think</h3>
+          <p class="by">By: Sudi</p>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora,
+            ad blanditiis. Error accusantium vero blanditiis, dolorem molestias
+            nam aspernatur impedit animi ea repellat asperiores facilis cumque,
+            rem nihil consequuntur ab.
+          </p>
+        </div>
+      </div>
       <div class="post__container"></div>
       <div class="post__container"></div>
       <div class="post__container"></div>
