--- a/java2/login.html
+++ b/java2/login.html
@@ -10,7 +10,7 @@
   <body>
     <h1 class="fix">halleluja</h1>
     <center><h1>Student Login Form</h1></center>
-    <form>
+    <form id="login-form">
       <div class="container">
         <label>Your Name: New users only </label>
         <input
