--- a/java2/posts.html
+++ b/java2/posts.html
@@ -7,7 +7,7 @@
     <script type="module" src="/main.js" defer></script>
     <title>:: Posts ::</title>
   </head>
-  <body>
+  <body class="post_body">
     <header></header>
     <div class="grid__container">
       <div class="post__container">
