--- a/java2/login.html
+++ b/java2/login.html
@@ -22,7 +22,7 @@
           required
         />
         <span id="emailNotValid" class="hidden">
-          Email is not vaild. Must be stud.noroff or noroff.no email adress.
+          Email is not vaild. Must be stud.noroff </br> or noroff.no email adress. </br>
         </span>
         <span id="emailError" class="hidden">Email is required</span>
         <label>Password : </label>
