--- a/java2/posts.html
+++ b/java2/posts.html
@@ -8,7 +8,9 @@
     <title>:: Posts ::</title>
   </head>
   <body class="post_body">
-    <header></header>
+    <header>
+      <div id="nav-bar" class="nav-bar"></div>
+    </header>
     <div class="grid__container">
       <div class="post__container">
         <div class="post__container--box">
