--- a/java2/index.html
+++ b/java2/index.html
@@ -59,6 +59,7 @@
         </div>
         <a href="./login.html">login</a>
         <a href="./posts.html">Posts</a>
+        <a href="../landingPage.html">Landing Page</a>
       </div>
     </section>
     <section>
