--- a/java2/login.html
+++ b/java2/login.html
@@ -13,9 +13,7 @@
     <center><h1>Student Login Form</h1></center>
 
     <form id="login-form">
-
       <div class="container">
-
         <label>Email adress : </label>
         <input
           id="email"
@@ -25,10 +23,11 @@
           required
         />
         <span id="emailNotValid" class="hidden">
-          Email is not vaild. Must be stud.noroff </br> or noroff.no email adress. </br>
+          Email is not vaild. Must be stud.noroff <br />
+          or noroff.no email adress. <br />
         </span>
         <span id="emailError" class="hidden">Email is required</span>
-        
+
         <label>Password : </label>
         <input
           id="password"
