--- a/java2/landingPage.html
+++ b/java2/landingPage.html
@@ -8,9 +8,32 @@
     <title>:: Landing Page ::</title>
   </head>
   <body>
-    <section class="main">
-        <div class="flexBox"><div class="sign_in">Sign in</div></div>
-        <div class="flexBox"><div class="log_in">Log in</div></div>
+    <!--     <section class="top-nav">
+      <div>Logo Here</div>
+      <input id="menu-toggle" type="checkbox" />
+      <label class="menu-button-container" for="menu-toggle">
+        <div class="menu-button"></div>
+      </label>
+      <ul class="menu">
+        <li>Home</li>
+        <li>Posts</li>
+        <li>Create Post</li>
+        <li>Log Out</li>
+      </ul>
+    </section> -->
+    <section class="container__landingPage">
+      <div class="flexbox action--box">
+        <h1 class="headline__welcome--text">Welcome</h1>
+        <p class="text">
+          Please log in, or sign up if you don't have an account
+        </p>
+      </div>
+      <a href="" class="flexBox">
+        <div class="flexBox action--box">Sig In</div>
+      </a>
+      <a href="" class="flexBox">
+        <div class="flexBox action--box">Log In</div>
+      </a>
     </section>
   </body>
 </html>
