landing page ish done

--- a/java2/index.html
+++ b/java2/index.html
@@ -14,11 +14,12 @@
       <label class="menu-button-container" for="menu-toggle">
         <div class="menu-button"></div>
       </label>
+      <a href="./login.html">login</a>
       <ul class="menu">
         <li>Home</li>
-        <li>Posts</li>
+        <a href="./posts.html"><li>Posts</li></a>
         <li>Create Post</li>
-        <li>Log Out</li>
+        <a href="./landingPage.html"><li>Log Out</li></a>
       </ul>
     </section>
     <section class="main">
@@ -57,9 +58,6 @@
           </p>
           <button class="btn">Let's Go</button>
         </div>
-        <a href="./login.html">login</a>
-        <a href="./posts.html">Posts</a>
-        <a href="../landingPage.html">Landing Page</a>
       </div>
     </section>
     <section>
