--- a/java2/landingPage.html
+++ b/java2/landingPage.html
@@ -13,8 +13,8 @@
       <p class="text">Please log in, or sign up if you don't have an account</p>
     </div>
     <section class="container__landingPage">
-      <a href="" class="flexBox">
-        <div class="flexBox action--box">Sig In</div>
+      <a href="./signUp.html" class="flexBox">
+        <div class="flexBox action--box">Sign In</div>
       </a>
       <a href="./login.html" class="flexBox">
         <div class="flexBox action--box">Log In</div>
