--- a/java2/posts.html
+++ b/java2/posts.html
@@ -15,7 +15,7 @@
       <div class="post__container">
         <div class="post__container--box">
           <h3 class="post_headline">I think</h3>
-          <p class="by">By: Sudi</p>
+          <p class="post__author">By: Sudi</p>
           <p class="text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora,
             ad blanditiis. Error accusantium vero blanditiis, dolorem molestias
