updating the style on posts

--- a/java2/posts.html
+++ b/java2/posts.html
@@ -11,22 +11,12 @@
     <header>
       <div id="nav-bar" class="nav-bar"></div>
     </header>
-    <div class="grid__container">
-      <div class="post__container">
-        <div class="post__container--box">
-          <h3 class="post_headline">I think</h3>
-          <p class="post__author">By: Sudi</p>
-          <p class="text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora,
-            ad blanditiis. Error accusantium vero blanditiis, dolorem molestias
-            nam aspernatur impedit animi ea repellat asperiores facilis cumque,
-            rem nihil consequuntur ab.
-          </p>
-        </div>
-      </div>
-      <div class="post__container"></div>
-      <div class="post__container"></div>
-      <div class="post__container"></div>
+    <div class="main__content">
+      <div class="main__content--box"></div>
+      <div class="main__content--box"></div>
+      <div class="main__content--box"></div>
+      <div class="main__content--box"></div>
+      <div class="main__content--box"></div>
     </div>
   </body>
 </html>
