--- a/java2/posts.html
+++ b/java2/posts.html
@@ -11,12 +11,22 @@
     <header>
       <div id="nav-bar" class="nav-bar"></div>
     </header>
-    <div class="main__content">
-      <div class="main__content--box"></div>
-      <div class="main__content--box"></div>
-      <div class="main__content--box"></div>
-      <div class="main__content--box"></div>
-      <div class="main__content--box"></div>
-    </div>
+    <section class="posts__main">
+      <div class="content__container">
+        <div class="content_container--post">
+          <h2 class="post__title">Headline</h2>
+          <p class="author">By: Sudi</p>
+          <p class="post__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+            recusandae!
+          </p>
+          <button class="interact">Press me!</button>
+        </div>
+        <div class="content_container--post"></div>
+        <div class="content_container--post"></div>
+        <div class="content_container--post"></div>
+        <div class="content_container--post"></div>
+      </div>
+    </section>
   </body>
 </html>
