--- a/java2/posts.html
+++ b/java2/posts.html
@@ -16,16 +16,69 @@
         <div class="content_container--post">
           <h2 class="post__title">Headline</h2>
           <p class="author">By: Sudi</p>
-          <p class="post__content">
+          <p class="post__text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
             recusandae!
           </p>
-          <button class="interact">Press me!</button>
         </div>
-        <div class="content_container--post"></div>
-        <div class="content_container--post"></div>
-        <div class="content_container--post"></div>
-        <div class="content_container--post"></div>
+        <div class="content_container--post">
+          <h2 class="post__title">Headline</h2>
+          <p class="author">By: Sudi</p>
+          <p class="post__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+            recusandae! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Sequi, autem! Iste sit consectetur eius beatae.
+          </p>
+        </div>
+        <div class="content_container--post">
+          <h2 class="post__title">Headline</h2>
+          <p class="author">By: Sudi</p>
+          <p class="post__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+            recusandae!
+          </p>
+        </div>
+        <div class="content_container--post">
+          <h2 class="post__title">Headline</h2>
+          <p class="author">By: Sudi</p>
+          <p class="post__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+            recusandae!
+          </p>
+        </div>
+        <div class="content_container--post">
+          <h2 class="post__title">Headline</h2>
+          <p class="author">By: Sudi</p>
+          <p class="post__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+            recusandae!
+          </p>
+        </div>
+        <div class="content_container--post">
+          <h2 class="post__title">Headline</h2>
+          <p class="author">By: Sudi</p>
+          <p class="post__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+            recusandae!
+          </p>
+        </div>
+        <div class="content_container--post">
+          <h2 class="post__title">Headline</h2>
+          <p class="author">By: Sudi</p>
+          <p class="post__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+            recusandae!
+          </p>
+        </div>
+        <div class="content_container--post">
+          <h2 class="post__title">Headline</h2>
+          <p class="author">By: Sudi</p>
+          <p class="post__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+            recusandae!
+          </p>
+        </div>
+        <div class="content__container"></div>
       </div>
     </section>
   </body>
