working on the nav bar

--- a/java2/index.html
+++ b/java2/index.html
@@ -18,45 +18,40 @@
       <ul class="menu">
         <li>Home</li>
         <a href="./posts.html"><li>Posts</li></a>
-        <li>Create Post</li>
+        <a href="./createPost.html"><li>Create Post</li></a>
         <a href="./landingPage.html"><li>Log Out</li></a>
       </ul>
     </section>
     <section class="main">
       <div class="main__content">
         <div class="main__content--box">
-          <h2>Hello, welcome back</h2>
-          <p class="main__content--text">Time to create some posts</p>
+          <h2 class="log__in">Hello, welcome back</h2>
+          <p class="main__content--text">Time to create some posts :)</p>
         </div>
         <div class="main__content--box">
           <p class="main__content--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
             ullam.
           </p>
-          <button class="btn">Let's Go</button>
         </div>
         <div class="main__content--box">
           <p class="main__content--text">
             Lorem ipsum dolor sit amet consectetur adipisicing.
           </p>
-          <button class="btn">Let's Go</button>
         </div>
         <div class="main__content--box">
           <p class="main__content--text">Lorem ipsum dolor sit amet.</p>
-          <button class="btn">Let's Go</button>
         </div>
         <div class="main__content--box">
           <p class="main__content--text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
           </p>
-          <button class="btn">Let's Go</button>
         </div>
         <div class="main__content--box">
           <p class="main__content--text">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Perferendis.
           </p>
-          <button class="btn">Let's Go</button>
         </div>
       </div>
     </section>
