--- a/java2/posts.html
+++ b/java2/posts.html
@@ -7,10 +7,9 @@
     <script type="module" src="/main.js" defer></script>
     <title>:: Posts ::</title>
   </head>
+  <section class="top-nav" id="nav-bar">
+  </section>
   <body class="post_body">
-    <header>
-      <div id="nav-bar" class="nav-bar"></div>
-    </header>
     <section class="posts__main">
       <div class="content__container">
         <div class="content_container--post">
@@ -74,7 +73,7 @@
           <h2 class="post__title">Headline</h2>
           <p class="author">By: Sudi</p>
           <p class="post__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+            Lorem ipsumd dolor sit amet consectetur adipisicing elit. Placeat,
             recusandae!
           </p>
         </div>
