--- a/java2/login.html
+++ b/java2/login.html
@@ -5,12 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/main.js" defer></script>
-    <script type="module" src="./js/logInPage.mjs"></script>
+    <script type="module" src="./js/logInPage.mjs" defer></script>
     <title>:: Welcome || Log in ::</title>
   </head>
   <body>
-    <section class="top-nav" id="nav-bar">
-    </section>
+    <section class="top-nav" id="nav-bar"></section>
     <center><h1>Student Login Form</h1></center>
 
     <div class="form__container">
