--- a/java2/signUp.html
+++ b/java2/signUp.html
@@ -5,22 +5,24 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/main.js" defer></script>
-    <script type="module" src="./js/signUp.mjs"></script>
+    <script type="module" src="./js/signUp.mjs" defer></script>
     <title>:: Sign up ::</title>
   </head>
   <body>
     <h1 class="sign_up_page">Hi and welcome to sign up.</h1>
-    <form id="login-form">
+    <form id="signup-form">
       <div class="container">
         <label>Your Name : </label>
         <input
-          id="name"
+          id="fName"
           type="text"
           placeholder="State your name"
           name="name"
           required
         />
-
+        <span id="firstNameError" class="hidden">
+          Please enter your first name</span
+        >
         <label>Email adress : </label>
         <input
           id="email"
@@ -43,16 +45,19 @@
           name="password"
           required
         />
+        <span id="passwordError" class="hidden"
+          >Password is required and must be over 8 characters</span
+        >
         <label>Confirm Password : </label>
         <input
-          id="confirmPassword"
+          id="confirmedPassword"
           type="password"
           placeholder="Confirm Password"
           name="password"
           required
         />
-        <span id="passwordError" class="hidden"
-          >Password is required and must be over 8 characters</span
+        <span id="confirmedPasswordError" class="hidden"
+          >Password dosen't match</span
         >
         <button type="submit">Login</button>
         <input type="checkbox" checked="checked" /> Remember me
@@ -60,6 +65,6 @@
         Forgot <a href="#"> password? </a>
       </div>
     </form>
-    <p id="error-message" class="error_text"></p>
+    <p id="general-error-message" class="error_text"></p>
   </body>
 </html>
