--- a/java2/login.html
+++ b/java2/login.html
@@ -9,7 +9,14 @@
     <title>:: Welcome || Log in ::</title>
   </head>
   <body>
-    <section class="top-nav" id="nav-bar"></section>
+    <section class="top-nav">
+      <ul class="menu">
+        <li>Home</li>
+        <li><a href="./posts.html" class="menu-link">Posts</a></li>
+        <li><a href="./createPost.html" class="menu-link">Create Post</a></li>
+        <li><a href="./landingPage.html" class="menu-link">Log Out</a></li>
+      </ul>
+    </section>
     <center><h1>Student Login Form</h1></center>
     <div class="form__container">
       <form id="login-form">
