--- a/java2/index.html
+++ b/java2/index.html
@@ -9,18 +9,12 @@
   </head>
   <body>
     <section class="top-nav">
-      <div>Logo Here</div>
-      <input id="menu-toggle" type="checkbox" />
-      <label class="menu-button-container" for="menu-toggle">
-        <div class="menu-button"></div>
-      </label>
-      <a href="./login.html">login</a>
-      <ul class="menu">
-        <li>Home</li>
-        <a href="./posts.html"><li>Posts</li></a>
-        <a href="./createPost.html"><li>Create Post</li></a>
-        <a href="./landingPage.html"><li>Log Out</li></a>
-      </ul>
+          <ul class="menu">
+            <li>Home</li>
+            <li><a href="./posts.html" class="menu-link">Posts</a></li>
+            <li><a href="./createPost.html" class="menu-link">Create Post</a></li>
+            <li><a href="./landingPage.html" class="menu-link">Log Out</a></li>
+          </ul>
     </section>
     <section class="main">
       <div class="main__content">
