--- a/java2/single-post.html
+++ b/java2/single-post.html
@@ -5,7 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/main.js" defer></script>
+    <script type="module" src="./js/singlePost.mjs" defer></script>
     <title>:: Post ::</title>
   </head>
+  <section class="top-nav" id="nav-bar"></section>
   <body class="postBody">
-  </body>
+    <section class="postMain">
+      <h1 class="PostContainer--headline">
+        <span class="headline--text"
+          >Good chooice, exellent post this is</span
+        >
+      </h1>
+      <div class="postContainer">
+      </div>
+    </section>
+</html>
