--- a/java2/single-post.html
+++ b/java2/single-post.html
@@ -18,5 +18,6 @@
       </h1>
       <div class="postContainer">
       </div>
+      <!-- /.edit-post.html?post_id=${id} -->
     </section>
 </html>
