fixed some error messages

--- a/java2/edit.html
+++ b/java2/edit.html
@@ -48,6 +48,7 @@
           </div>
           <button class="edit-btn justify-center">Edit</button>
         </form>
+        <div class="postNotification"></div>
       </div>
     </section>
   </body>
