even more styling

--- a/java2/createpost.html
+++ b/java2/createpost.html
@@ -9,12 +9,12 @@
     <title>:: Create Post ::</title>
   </head>
   <body>
-    <div class="create_post_container">
+    <section class="top-nav" id="nav-bar"></section>
+    <div class="form__container">
       <h1>
         <span>Create Post</span>
       </h1>
       <form action="submit" class="create-form" id="create-form">
-        <h2>Create a Post, NOW!!</h2>
         <div class="flex_container">
           <label for="postTitle" class="postTitle"
             >Post Title: (Required)
