--- a/java2/posts.html
+++ b/java2/posts.html
@@ -13,7 +13,7 @@
     <section class="postMain">
       <h1 class="PostContainer--headline">
         <span class="headline--text"
-          >Here are som quality posts...</span
+          >Some quality posts...</span
         >
       </h1>
       <div class="postContainer">
