--- a/java2/index.html
+++ b/java2/index.html
@@ -8,14 +8,7 @@
     <title>:: Front Page ::</title>
   </head>
   <body>
-    <section class="top-nav">
-          <ul class="menu">
-            <li>Home</li>
-            <li><a href="./posts.html" class="menu-link">Posts</a></li>
-            <li><a href="./createPost.html" class="menu-link">Create Post</a></li>
-            <li><a href="./landingPage.html" class="menu-link">Log Out</a></li>
-          </ul>
-    </section>
+    <section class="top-nav" id="nav-bar"></section>
     <section class="main">
       <div class="main__content">
         <div class="main__content--box">
