--- a/java2/login.html
+++ b/java2/login.html
@@ -17,7 +17,7 @@
         <li><a href="./landingPage.html" class="menu-link">Log Out</a></li>
       </ul>
     </section>
-    <center><h1>Student Login Form</h1></center>
+    <center><h1 class="login-h1">Login</h1></center>
     <div class="form__container">
       <form id="login-form">
         <label>Email adress : </label>
@@ -47,9 +47,6 @@
           >Password is required and must be over 8 characters</span
         >
         <button type="submit">Login</button>
-        <input type="checkbox" checked="checked" /> Remember me
-        <button type="button" class="cancelbtn">Cancel</button>
-        Forgot <a href="#"> password? </a>
       </form>
       <p id="error-message" class="error_text"></p>
     </div>
