--- a/java2/createpost.html
+++ b/java2/createpost.html
@@ -11,7 +11,7 @@
   <body>
     <section class="top-nav" id="nav-bar"></section>
     <div class="form__container">
-      <h1>
+      <h1 class="create_post-h1">
         <span>Create Post</span>
       </h1>
       <form action="submit" class="create-form" id="create-form">
