commit from terminal

--- a/java2/signUp.html
+++ b/java2/signUp.html
@@ -33,7 +33,7 @@
         />
         <span id="emailNotValid" class="hidden">
           Email is not vaild. Must be stud.noroff <br />
-          or noroff.no email adress. <br />
+          or noroff.no email adress. pls <br />
         </span>
         <span id="emailError" class="hidden">Email is required</span>
 
